tests/fixtures/invalid/max_str_none.py
# Cannot call max() with Str, None
x = max("hello", None)
